# Rk1

./: CMakeLists.txt  task1_pipeline.cpp  task1_warehouse_sync.cpp  task2_production_semaphores.cpp  task2_queue_semaphores.cpp
